--- a/OsuFootPrint3.0/app/src/main/res/values/strings.xml
+++ b/OsuFootPrint3.0/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">OsuFootPrint2.0</string>
+    <string name="app_name">OsuFootPrint</string>
     <string name="hello_world">Hello world!</string>
     <string name="log">Log in</string>
     <string name="appname">OSU FOOTPRINT</string>
