--- a/OsuFootPrint3.0/app/src/main/res/values/strings.xml
+++ b/OsuFootPrint3.0/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">OsuFootPrint</string>
+    <string name="app_name">OSUFootprint</string>
     <string name="hello_world">Hello world!</string>
     <string name="log">Log in</string>
-    <string name="appname">OSU FOOTPRINT</string>
+    <string name="appname">OSUFootprint</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
@@ -24,5 +24,9 @@
     <string name="title_activity_new_accounts">NewAccounts</string>
     <string name="title_activity_pop_activities">PopActivities</string>
     <string name="title_activity_my_wishlist">MyWishlist</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_my_location">MyLocation</string>
+    <string name="open_map">map</string>
+    <string name="title_activity_footprint_map">FootprintMap</string>
 
 </resources>
